LPS-76345 - Portlet-topper icons overlapping fix

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/portlet/_topper.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/portlet/_topper.scss
@@ -95,9 +95,12 @@
 
 .portlet-topper-toolbar {
 	margin-bottom: 0;
-	margin-right: -10px;
 	margin-top: 0;
 	padding-left: 0;
+
+	&:last-of-type {
+		margin-right: -10px;
+	}
 
 	> a, > span > a, .lfr-icon-menu > a {
 		color: $portlet-topper-link-color;
